--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Название проекта</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
+</head>
+
+<body class="page__body">
+  <header class="header">Шапка</header>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dicta officia ipsa a obcaecati neque quidem nam amet eos, temporibus beatae ut voluptatibus ad adipisci explicabo maiores accusantium provident! Illo.</p>
+</body>
+
 </html>
