--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
   <header class="header">Шапка</header>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dicta officia ipsa a obcaecati neque quidem nam amet eos, temporibus beatae ut voluptatibus ad adipisci explicabo maiores accusantium provident! Illo.</p>
+  <p>Lorem ipsum dolor sit amet. elit. Doloremque dicta officia ipsa a obcaecati neque quidem nam amet eos, temporibus beatae ut voluptatibus ad adipisci explicabo maiores accusantium provident! Illo.</p>
 </body>
 
 </html>
