--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
 <body class="page__body">
   <header class="main-header">
     <div class="main-header__wrapper">
-      <a class="main-header__logo" href="../source/index.html">
+      <a class="main-header__logo" href="../source/index.html" aria-label="Перейти на главную страницу">
         <img class="main-header__logo-image" src="#" width="190" height="38" alt="Логотип «Кэт энерджи»">
       </a>
       <button class="main-header__toggle" type="button">
@@ -34,13 +34,13 @@
     </div>
   </header>
   <main>
+    <h1 class="catalog__title">Каталог продукции</h1>
     <section class="catalog">
+      <h2 class="visually-hidden">Основная продукция «Кэт энерджи»</h2>
       <div class="catalog__wrapper">
-        <h1 class="catalog__title">Каталог продукции</h1>
-        <h2 class="visually-hidden">Основная продукция «Кэт энерджи»</h2>
         <ul class="catalog__list">
           <li class="catalog__list-item">
-            <a class="list-item__link" href="#">
+            <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 500 г курица">
               <img class="list-item__image" src="#" width="68" height="86" alt="Cat energy pro 500 г курица">
             </a>
             <div class="list-item__wrapper">
@@ -63,7 +63,7 @@
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
           <li class="catalog__list-item">
-            <a class="list-item__link" href="#">
+            <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 1000 г курица">
               <img class="list-item__image" src="#" width="84" height="100" alt="Cat energy pro 1000 г курица">
             </a>
             <div class="list-item__wrapper">
@@ -86,7 +86,7 @@
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
           <li class="catalog__list-item">
-            <a class="list-item__link" href="#">
+            <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 500 г рыба">
               <img class="list-item__image" src="#" width="68" height="78" alt="Cat energy pro 500 г рыба">
             </a>
             <div class="list-item__wrapper">
@@ -109,7 +109,7 @@
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
           <li class="catalog__list-item">
-            <a class="list-item__link" href="#">
+            <a class="list-item__link" href="#" aria-label="ссылка на сat energy pro 1000 г рыба">
               <img class="list-item__image" src="#" width="84" height="100" alt="Cat energy pro 1000 г рыба">
             </a>
             <div class="list-item__wrapper">
@@ -132,7 +132,7 @@
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
           <li class="catalog__list-item">
-            <a class="list-item__link" href="#">
+            <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 500 г гречка">
               <img class="list-item__image" src="#" width="68" height="78" alt="Cat energy slim 500 г гречка">
             </a>
             <div class="list-item__wrapper">
@@ -155,7 +155,7 @@
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
           <li class="catalog__list-item">
-            <a class="list-item__link" href="#">
+            <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 1000 г гречка">
               <img class="list-item__image" src="#" width="84" height="100" alt="Cat energy slim 1000 г гречка">
             </a>
             <div class="list-item__wrapper">
@@ -178,7 +178,7 @@
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
           <li class="catalog__list-item">
-            <a class="list-item__link" href="#">
+            <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 500 г рис">
               <img class="list-item__image" src="#" width="68" height="78" alt="Cat energy slim 500 г рис">
             </a>
             <div class="list-item__wrapper">
@@ -200,57 +200,57 @@
             </div>
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
-          <li class="catalog__more">
-            <p class="catalog__more-title">Показать еще 100500 товаров</p>
-            <p class="catalog__more-desc">На самом деле вкусов гораздо больше!</p>
-            <a class="catalog__more-show" href="#">Показать все</a>
-          </li>
         </ul>
+        <div class="catalog__more">
+          <p class="catalog__more-title">Показать еще 100500 товаров</p>
+          <p class="catalog__more-desc">На самом деле вкусов гораздо больше!</p>
+          <a class="catalog__more-show" href="#">Показать все</a>
+        </div>
       </div>
     </section>
     <section class="sub-products">
       <div class="sub-products__wrapper">
         <h2 class="sub-products__title">Дополнительные товары</h2>
         <ul class="sub-products__list">
-          <li class="sub-products__list-item">
-            <h3 class="list-item__sub-product-title">Сахарозаменитель</h3>
-            <table class="sub-product__table">
+          <li class="sub-products__item">
+            <h3 class="sub-products__item-title">Сахарозаменитель</h3>
+            <table class="sub-products__table">
               <tr>
-                <td class="sub-product__desc">1 упаковка (100 г)</td>
-                <td class="sub-product__price">200 ₽</td>
+                <td class="sub-products__desc">1 упаковка (100 г)</td>
+                <td class="sub-products__price">200 ₽</td>
               </tr>
             </table>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-oder" href="#">Заказать</a>
           </li>
-          <li class="sub-products__list-item">
-            <h3 class="list-item__sub-product-title">Питьевая вода</h3>
-            <table class="sub-product__table">
+          <li class="sub-products__item">
+            <h3 class="sub-products__item-title">Питьевая вода</h3>
+            <table class="sub-products__table">
               <tr>
-                <td class="sub-product__desc">5 литров</td>
-                <td class="sub-product__price">50 ₽</td>
+                <td class="sub-products__desc">5 литров</td>
+                <td class="sub-products__price">50 ₽</td>
               </tr>
             </table>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-oder" href="#">Заказать</a>
           </li>
-          <li class="sub-products__list-item">
-            <h3 class="list-item__sub-product-title">Молоко</h3>
-            <table class="sub-product__table">
+          <li class="sub-products__item">
+            <h3 class="sub-product__item-title">Молоко</h3>
+            <table class="sub-products__table">
               <tr>
-                <td class="sub-product__desc">1 литр</td>
-                <td class="sub-product__price">100 ₽</td>
+                <td class="sub-products__desc">1 литр</td>
+                <td class="sub-products__price">100 ₽</td>
               </tr>
             </table>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-oder" href="#">Заказать</a>
           </li>
-          <li class="sub-products__list-item">
-            <h3 class="list-item__sub-product-title">Витамины</h3>
-            <table class="sub-product__table">
+          <li class="sub-products__item">
+            <h3 class="sub-products__item-title">Витамины</h3>
+            <table class="sub-products__table">
               <tr>
-                <td class="sub-product__desc">1 упаковка (30 г)</td>
-                <td class="sub-product__price">300 ₽</td>
+                <td class="sub-products__desc">1 упаковка (30 г)</td>
+                <td class="sub-products__price">300 ₽</td>
               </tr>
             </table>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-oder" href="#">Заказать</a>
           </li>
         </ul>
         <div class="sub-products__gift">
@@ -264,7 +264,7 @@
         <p class="subscribe__desc">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="newsletter-email">Email</label>
-          <input class="field" placeholder="кuklachev@gmail.com" type="email" name="newsletter-email" id="newsletter-email" required />
+          <input class="field" placeholder="кuklachev@gmail.com" type="email" name="newsletter-email" id="newsletter-email" required>
           <button class="subscribe__form-button" type="submit">Подписаться</button>
         </form>
       </div>
@@ -286,25 +286,25 @@
         <li class="social-list__item">
           <a class="social-list__link" href="#">
             <span class="visually-hidden">Вконтакте</span>
-            <svg class="social-list__icon--vk" width="27" height="17"></svg>
+            <svg class="social-list__icon social-list__icon--vk" width="27" height="17"></svg>
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
             <span class="visually-hidden">You-tube</span>
-            <svg class="social-list__icon--you-tube" width="24" height="19"></svg>
+            <svg class="social-list__icon social-list__icon--you-tube" width="24" height="19"></svg>
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
             <span class="visually-hidden">Telegram</span>
-            <svg class="social-list__icon--telegram" width="20" height="17"></svg>
+            <svg class="social-list__icon social-list__icon--telegram" width="20" height="17"></svg>
           </a>
         </li>
       </ul>
       <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="footer__copyright--text">HTML Academy</span>
-        <img class="footer__copyright--logo" width="27" height="34" src="#" alt="Логотип HTML Academy">
+        <span class="footer__copyright footer__copyright--text">HTML Academy</span>
+        <img class="footer__copyright footer__copyright--logo" width="27" height="34" src="#" alt="Логотип HTML Academy">
       </a>
     </div>
   </footer>
