--- a/source/index.html
+++ b/source/index.html
@@ -12,13 +12,13 @@
 <body class="page__body">
   <header class="main-header">
     <div class="main-header__wrapper">
-      <a class="main-header__logo" href="../source/index.html">
+      <a class="main-header__logo" href="../source/index.html" aria-label="Перейти на главную страницу">
         <img class="main-header__logo-image" src="#" width="190" height="38" alt="Логотип «Кэт энерджи»">
       </a>
-      <button class="main-header__toggle" type="button">
-        <span class="visually-hidden">Открыть/Закрыть меню</span>
-      </button>
       <nav class="main-navigation">
+        <button class="main-navigation__toggle" type="button">
+          <span class="visually-hidden">Открыть/Закрыть меню</span>
+        </button>
         <ul class="main-navigation__list">
           <li class="main-navigation__list-item">
             <a class="main-navigation__link main-navigation__link--current" href="../source/index.html">Главная</a>
@@ -34,9 +34,10 @@
     </div>
   </header>
   <main>
+    <h1 class="visually-hidden">Продукция «Кэт энерджи»</h1>
     <section class="hero">
       <div class="hero__wrapper">
-        <h1 class="hero__title">Функциональное питание для котов</h1>
+        <h2 class="hero__title">Функциональное питание для котов</h2>
         <p class="hero__desc">Занялся собой? Займись котом!</p>
         <img class="hero__hero-image" src="#" width="280" height="270" alt="Упаковка питания для кошке со вкусом курицы">
         <a class="hero__nutrition-program" href="../source/form.html">Подобрать программу</a>
@@ -46,15 +47,15 @@
       <h2 class="visually-hidden">Программы похудения или набора массы</h2>
       <div class="programs__wrapper">
         <ul class="programs__list">
-          <li class="programs__list--item">
-            <h3 class="programs__list--title">Похудение</h3>
-            <p class="programs__list--desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="programs__list--link" href="#">Каталог slim</a>
+          <li class="programs__list-item">
+            <h3 class="programs__list-title">Похудение</h3>
+            <p class="programs__list-desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="programs__list-link" href="#">Каталог slim</a>
           </li>
-          <li class="programs__list--item">
-            <h3 class="programs__list--title">Набор массы</h3>
-            <p class="programs__list--desc">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="programs__list--link" href="#">Каталог pro</a>
+          <li class="programs__list-item">
+            <h3 class="programs__list-title">Набор массы</h3>
+            <p class="programs__list-desc">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="programs__list-link" href="#">Каталог pro</a>
           </li>
         </ul>
       </div>
@@ -63,10 +64,10 @@
       <div class="how-it-works__wrapper">
         <h2 class="how-it-works__title">Как это работает</h2>
         <ul class="how-it-works__list">
-          <li class="how-it-works__list--item">Функциональное питание содержит только полезные питательные вещества.</li>
-          <li class="how-it-works__list--item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-          <li class="how-it-works__list--item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="how-it-works__list--item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          <li class="how-it-works__list-item">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="how-it-works__list-item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="how-it-works__list-item">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="how-it-works__list-item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
         </ul>
       </div>
     </section>
@@ -75,18 +76,18 @@
         <h2 class="example__title">Живой пример</h2>
         <p class="example__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         <div class="example__results">
-          <p class="example__results--weight">
-            <span class="example__results--weight-number">5 кг</span>
-            <span class="example__results--weight-change">Cнижение веса</span>
+          <p class="example__results-weight">
+            <span class="example__results-difference">5 кг</span>
+            <span class="example__results-change">Cнижение веса</span>
           </p>
-          <p class="example__results--times">
-            <span class="example__results--times-days">60 дней</span>
-            <span class="example__results--times-change">Затрачено времени</span>
+          <p class="example__results-times">
+            <span class="example__results-time">60 дней</span>
+            <span class="example__results-spent">Затрачено времени</span>
           </p>
         </div>
         <span class="example__spending-money">Затраты на питание: 15 000 руб.</span>
-        <div class="example__demonstration">
-          <img class="demonstration__image" src="#" width="280" height="256" alt="Демонстрация изменений">
+        <div class="demonstration">
+          <img class="demonstration__demonstration-image" src="#" width="280" height="256" alt="Демонстрация изменений">
           <div class="demonstration__slider"></div>
         </div>
       </div>
@@ -108,25 +109,25 @@
         <li class="social-list__item">
           <a class="social-list__link" href="#">
             <span class="visually-hidden">Вконтакте</span>
-            <svg class="social-list__icon--vk" width="27" height="17"></svg>
+            <svg class="social-list__icon social-list__icon--vk" width="27" height="17"></svg>
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
             <span class="visually-hidden">You-tube</span>
-            <svg class="social-list__icon--you-tube" width="24" height="19"></svg>
+            <svg class="social-list__icon social-list__icon--you-tube" width="24" height="19"></svg>
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
             <span class="visually-hidden">Telegram</span>
-            <svg class="social-list__icon--telegram" width="20" height="17"></svg>
+            <svg class="social-list__icon social-list__icon--telegram" width="20" height="17"></svg>
           </a>
         </li>
       </ul>
       <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="footer__copyright--text">HTML Academy</span>
-        <img class="footer__copyright--logo" width="27" height="34" src="#" alt="Логотип HTML Academy">
+        <span class="footer__copyright footer__copyright--text">HTML Academy</span>
+        <img class="footer__copyright footer__copyright--logo" width="27" height="34" src="#" alt="Логотип HTML Academy">
       </a>
     </div>
   </footer>
