мелкие доработки и опечатки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,13 +33,13 @@
       </nav>
     </div>
   </header>
-  <main>
-    <h1 class="catalog__title">Каталог продукции</h1>
+  <main class="page-content">
+    <h1 class="page-content__title">Каталог продукции</h1>
     <section class="catalog">
       <h2 class="visually-hidden">Основная продукция «Кэт энерджи»</h2>
       <div class="catalog__wrapper">
         <ul class="catalog__list">
-          <li class="catalog__list-item">
+          <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 500 г курица">
               <img class="list-item__image" src="#" width="68" height="86" alt="Cat energy pro 500 г курица">
             </a>
@@ -56,13 +56,13 @@
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Цена</td>
-                  <td class="list-itemt__desc-content">700 ₽</td>
+                  <td class="list-item__desc-content">700 ₽</td>
                 </tr>
               </table>
             </div>
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
-          <li class="catalog__list-item">
+          <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 1000 г курица">
               <img class="list-item__image" src="#" width="84" height="100" alt="Cat energy pro 1000 г курица">
             </a>
@@ -85,7 +85,7 @@
             </div>
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
-          <li class="catalog__list-item">
+          <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 500 г рыба">
               <img class="list-item__image" src="#" width="68" height="78" alt="Cat energy pro 500 г рыба">
             </a>
@@ -94,7 +94,7 @@
               <table class="list-item__desc">
                 <tr>
                   <td class="list-item__desc-title">Масса</td>
-                  <td class="list-itemt__desc-content">500 г</td>
+                  <td class="list-item__desc-content">500 г</td>
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Вкус</td>
@@ -102,13 +102,13 @@
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Цена</td>
-                  <td class="list-itemt__desc-content">700 ₽</td>
+                  <td class="list-item__desc-content">700 ₽</td>
                 </tr>
               </table>
             </div>
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
-          <li class="catalog__list-item">
+          <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на сat energy pro 1000 г рыба">
               <img class="list-item__image" src="#" width="84" height="100" alt="Cat energy pro 1000 г рыба">
             </a>
@@ -117,7 +117,7 @@
               <table class="list-item__desc">
                 <tr>
                   <td class="list-item__desc-title">Масса</td>
-                  <td class="list-itemt__desc-content">1000 г</td>
+                  <td class="list-item__desc-content">1000 г</td>
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Вкус</td>
@@ -125,13 +125,13 @@
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Цена</td>
-                  <td class="list-itemt__desc-content">1000 ₽</td>
+                  <td class="list-item__desc-content">1000 ₽</td>
                 </tr>
               </table>
             </div>
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
-          <li class="catalog__list-item">
+          <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 500 г гречка">
               <img class="list-item__image" src="#" width="68" height="78" alt="Cat energy slim 500 г гречка">
             </a>
@@ -140,7 +140,7 @@
               <table class="list-item__desc">
                 <tr>
                   <td class="list-item__desc-title">Масса</td>
-                  <td class="list-itemt__desc-content">500 г</td>
+                  <td class="list-item__desc-content">500 г</td>
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Вкус</td>
@@ -148,13 +148,13 @@
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Цена</td>
-                  <td class="list-itemt__desc-content">400 ₽</td>
+                  <td class="list-item__desc-content">400 ₽</td>
                 </tr>
               </table>
             </div>
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
-          <li class="catalog__list-item">
+          <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 1000 г гречка">
               <img class="list-item__image" src="#" width="84" height="100" alt="Cat energy slim 1000 г гречка">
             </a>
@@ -163,7 +163,7 @@
               <table class="list-item__desc">
                 <tr>
                   <td class="list-item__desc-title">Масса</td>
-                  <td class="list-itemt__desc-content">1000 г</td>
+                  <td class="list-item__desc-content">1000 г</td>
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Вкус</td>
@@ -171,13 +171,13 @@
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Цена</td>
-                  <td class="list-itemt__desc-content">700 ₽</td>
+                  <td class="list-item__desc-content">700 ₽</td>
                 </tr>
               </table>
             </div>
             <a class="list-item__link-oder" href="#">Заказать</a>
           </li>
-          <li class="catalog__list-item">
+          <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 500 г рис">
               <img class="list-item__image" src="#" width="68" height="78" alt="Cat energy slim 500 г рис">
             </a>
@@ -186,7 +186,7 @@
               <table class="list-item__desc">
                 <tr>
                   <td class="list-item__desc-title">Масса</td>
-                  <td class="list-itemt__desc-content">500 г</td>
+                  <td class="list-item__desc-content">500 г</td>
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Вкус</td>
@@ -194,7 +194,7 @@
                 </tr>
                 <tr>
                   <td class="list-item__desc-title">Цена</td>
-                  <td class="list-itemt__desc-content">500 ₽</td>
+                  <td class="list-item__desc-content">500 ₽</td>
                 </tr>
               </table>
             </div>
@@ -233,7 +233,7 @@
             <a class="sub-products__link-oder" href="#">Заказать</a>
           </li>
           <li class="sub-products__item">
-            <h3 class="sub-product__item-title">Молоко</h3>
+            <h3 class="sub-products__item-title">Молоко</h3>
             <table class="sub-products__table">
               <tr>
                 <td class="sub-products__desc">1 литр</td>
@@ -264,7 +264,7 @@
         <p class="subscribe__desc">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="newsletter-email">Email</label>
-          <input class="field" placeholder="кuklachev@gmail.com" type="email" name="newsletter-email" id="newsletter-email" required>
+          <input class="subscribe__field-email" placeholder="kuklachev@gmail.com" type="email" name="newsletter-email" id="newsletter-email" required>
           <button class="subscribe__form-button" type="submit">Подписаться</button>
         </form>
       </div>
