--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Каталог продукции «Кэт энерджи»</title>
+  <title>Проект «Кэт энерджи»</title>
+  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="./favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
