--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,7 +71,7 @@
                 </tr>
               </table>
             </div>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 1000 г курица">
@@ -98,7 +98,7 @@
                 </tr>
               </table>
             </div>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy pro 500 г рыба">
@@ -124,7 +124,7 @@
                 </tr>
               </table>
             </div>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на сat energy pro 1000 г рыба">
@@ -151,7 +151,7 @@
                 </tr>
               </table>
             </div>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 500 г гречка">
@@ -177,7 +177,7 @@
                 </tr>
               </table>
             </div>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 1000 г гречка">
@@ -204,7 +204,7 @@
                 </tr>
               </table>
             </div>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <a class="list-item__link" href="#" aria-label="ссылка на cat energy slim 500 г рис">
@@ -230,7 +230,7 @@
                 </tr>
               </table>
             </div>
-            <a class="list-item__link-oder" href="#">Заказать</a>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
         </ul>
         <div class="catalog__more">
@@ -252,7 +252,7 @@
                 <td class="sub-products__price">200 ₽</td>
               </tr>
             </table>
-            <a class="sub-products__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-order" href="#">Заказать</a>
           </li>
           <li class="sub-products__item">
             <h3 class="sub-products__item-title">Питьевая вода</h3>
@@ -262,7 +262,7 @@
                 <td class="sub-products__price">50 ₽</td>
               </tr>
             </table>
-            <a class="sub-products__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-order" href="#">Заказать</a>
           </li>
           <li class="sub-products__item">
             <h3 class="sub-products__item-title">Молоко</h3>
@@ -272,7 +272,7 @@
                 <td class="sub-products__price">100 ₽</td>
               </tr>
             </table>
-            <a class="sub-products__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-order" href="#">Заказать</a>
           </li>
           <li class="sub-products__item">
             <h3 class="sub-products__item-title">Витамины</h3>
@@ -282,7 +282,7 @@
                 <td class="sub-products__price">300 ₽</td>
               </tr>
             </table>
-            <a class="sub-products__link-oder" href="#">Заказать</a>
+            <a class="sub-products__link-order" href="#">Заказать</a>
           </li>
         </ul>
         <div class="sub-products__gift">
