--- a/source/catalog.html
+++ b/source/catalog.html
@@ -82,6 +82,7 @@
               </div>
               <a class="list-item__link-order" href="#">Заказать</a>
             </div>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <div class="catalog__item-wrapper">
@@ -113,6 +114,7 @@
               </div>
               <a class="list-item__link-order" href="#">Заказать</a>
             </div>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <div class="catalog__item-wrapper">
@@ -143,6 +145,7 @@
               </div>
               <a class="list-item__link-order" href="#">Заказать</a>
             </div>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <div class="catalog__item-wrapper">
@@ -174,6 +177,7 @@
               </div>
               <a class="list-item__link-order" href="#">Заказать</a>
             </div>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <div class="catalog__item-wrapper">
@@ -204,6 +208,7 @@
               </div>
               <a class="list-item__link-order" href="#">Заказать</a>
             </div>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <div class="catalog__item-wrapper">
@@ -235,6 +240,7 @@
               </div>
               <a class="list-item__link-order" href="#">Заказать</a>
             </div>
+            <a class="list-item__link-order" href="#">Заказать</a>
           </li>
           <li class="catalog__item list-item">
             <div class="catalog__item-wrapper">
@@ -265,6 +271,8 @@
               </div>
               <a class="list-item__link-order" href="#">Заказать</a>
             </div>
+            <<<<<<< HEAD=======<a class="list-item__link-order" href="#">Заказать</a>
+              >>>>>>> 0696806 (правки 2)
           </li>
         </ul>
         <div class="catalog__more">
@@ -277,60 +285,50 @@
     <section class="sub-products">
       <div class="sub-products__wrapper">
         <h2 class="sub-products__title">Дополнительные товары</h2>
-        <div class="sub-products__content">
-          <ul class="sub-products__list">
-            <li class="sub-products__item">
-              <h3 class="sub-products__item-title">Сахарозаменитель</h3>
-              <div class="sub-products__table-wrapper">
-                <table class="sub-products__table">
-                  <tr>
-                    <td class="sub-products__desc">1 упаковка (100 г)</td>
-                    <td class="sub-products__price">200 ₽</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="sub-products__link-order" href="#">Заказать</a>
-            </li>
-            <li class="sub-products__item">
-              <h3 class="sub-products__item-title">Питьевая вода</h3>
-              <div class="sub-products__table-wrapper">
-                <table class="sub-products__table">
-                  <tr>
-                    <td class="sub-products__desc">5 литров</td>
-                    <td class="sub-products__price">50 ₽</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="sub-products__link-order" href="#">Заказать</a>
-            </li>
-            <li class="sub-products__item">
-              <h3 class="sub-products__item-title">Молоко</h3>
-              <div class="sub-products__table-wrapper">
-                <table class="sub-products__table">
-                  <tr>
-                    <td class="sub-products__desc">1 литр</td>
-                    <td class="sub-products__price">100 ₽</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="sub-products__link-order" href="#">Заказать</a>
-            </li>
-            <li class="sub-products__item">
-              <h3 class="sub-products__item-title">Витамины</h3>
-              <div class="sub-products__table-wrapper">
-                <table class="sub-products__table">
-                  <tr>
-                    <td class="sub-products__desc">1 упаковка (30 г)</td>
-                    <td class="sub-products__price">300 ₽</td>
-                  </tr>
-                </table>
-              </div>
-              <a class="sub-products__link-order" href="#">Заказать</a>
-            </li>
-          </ul>
-          <div class="sub-products__gift">
-            <p class="sub-products__gift-desc">Закажите все и получите чехол для кота в подарок!</p>
-          </div>
+        <ul class="sub-products__list">
+          <li class="sub-products__item">
+            <h3 class="sub-products__item-title">Сахарозаменитель</h3>
+            <table class="sub-products__table">
+              <tr>
+                <td class="sub-products__desc">1 упаковка (100 г)</td>
+                <td class="sub-products__price">200 ₽</td>
+              </tr>
+            </table>
+            <a class="sub-products__link-order" href="#">Заказать</a>
+          </li>
+          <li class="sub-products__item">
+            <h3 class="sub-products__item-title">Питьевая вода</h3>
+            <table class="sub-products__table">
+              <tr>
+                <td class="sub-products__desc">5 литров</td>
+                <td class="sub-products__price">50 ₽</td>
+              </tr>
+            </table>
+            <a class="sub-products__link-order" href="#">Заказать</a>
+          </li>
+          <li class="sub-products__item">
+            <h3 class="sub-products__item-title">Молоко</h3>
+            <table class="sub-products__table">
+              <tr>
+                <td class="sub-products__desc">1 литр</td>
+                <td class="sub-products__price">100 ₽</td>
+              </tr>
+            </table>
+            <a class="sub-products__link-order" href="#">Заказать</a>
+          </li>
+          <li class="sub-products__item">
+            <h3 class="sub-products__item-title">Витамины</h3>
+            <table class="sub-products__table">
+              <tr>
+                <td class="sub-products__desc">1 упаковка (30 г)</td>
+                <td class="sub-products__price">300 ₽</td>
+              </tr>
+            </table>
+            <a class="sub-products__link-order" href="#">Заказать</a>
+          </li>
+        </ul>
+        <div class="sub-products__gift">
+          <p class="sub-products__gift-desc">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </section>
