--- a/source/index.html
+++ b/source/index.html
@@ -24,10 +24,11 @@
         </picture>
       </a>
       <nav class="main-navigation">
-        <button class="main-navigation__toggle" type="button">
+        <button class="main-navigation__toggle" type="button" aria-expanded="false" aria-controls="main-menu">
+          <span class="main-navigation__toggle-icon"></span>
           <span class="visually-hidden">Открыть/Закрыть меню</span>
         </button>
-        <ul class="main-navigation__list">
+        <ul class="main-navigation__list" id="main-menu" aria-hidden="true">
           <li class="main-navigation__list-item">
             <a class="main-navigation__link main-navigation__link--current" href="./index.html">Главная</a>
           </li>
@@ -59,15 +60,19 @@
       <h2 class="visually-hidden">Программы похудения или набора массы</h2>
       <div class="programs__wrapper">
         <ul class="programs__list">
-          <li class="programs__list-item">
+          <li class="programs__list-item programs__list-item--weight-loss">
             <h3 class="programs__list-title">Похудение</h3>
             <p class="programs__list-desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="programs__list-link" href="#">Каталог slim</a>
+            <a class="programs__list-link" href="#">Каталог slim
+              <span class="programs__list-arrow"></span>
+            </a>
           </li>
-          <li class="programs__list-item">
+          <li class="programs__list-item programs__list-item--weight-gain">
             <h3 class="programs__list-title">Набор массы</h3>
             <p class="programs__list-desc">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="programs__list-link" href="#">Каталог pro</a>
+            <a class="programs__list-link" href="#">Каталог pro
+              <span class="programs__list-arrow"></span>
+            </a>
           </li>
         </ul>
       </div>
@@ -76,10 +81,10 @@
       <div class="how-it-works__wrapper">
         <h2 class="how-it-works__title">Как это работает</h2>
         <ul class="how-it-works__list">
-          <li class="how-it-works__list-item">Функциональное питание содержит только полезные питательные вещества.</li>
-          <li class="how-it-works__list-item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-          <li class="how-it-works__list-item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="how-it-works__list-item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          <li class="how-it-works__list-item how-it-works__list-item--functional-nutrition">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="how-it-works__list-item how-it-works__list-item--release-form">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="how-it-works__list-item how-it-works__list-item--meal">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="how-it-works__list-item how-it-works__list-item--timing">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
         </ul>
       </div>
     </section>
@@ -88,14 +93,8 @@
         <h2 class="example__title">Живой пример</h2>
         <p class="example__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         <div class="example__results">
-          <p class="example__results-weight">
-            <span class="example__results-difference">5 кг</span>
-            <span class="example__results-change">Cнижение веса</span>
-          </p>
-          <p class="example__results-times">
-            <span class="example__results-time">60 дней</span>
-            <span class="example__results-spent">Затрачено времени</span>
-          </p>
+          <span class="example__results-difference">5 кг</span>
+          <span class="example__results-time">60 дней</span>
         </div>
         <span class="example__spending-money">Затраты на питание: 15 000 руб.</span>
         <div class="demonstration">
@@ -107,7 +106,7 @@
             <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-after-tablet-desktop@1x.png 1x, ./images/cat-after-tablet-desktop@2x.png 2x">
             <img class="demonstration__demonstration-image demonstration__demonstration-image--after" src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
           </picture>
-          <div class="demonstration__slider"></div>
+          <div class="demonstration__slider" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-labelledby="slider-label"></div>
         </div>
       </div>
     </section>
@@ -126,28 +125,22 @@
       </a>
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--vk" href="#">
             <span class="visually-hidden">Вконтакте</span>
-            <svg class="social-list__icon social-list__icon--vk" width="27" height="17"></svg>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--you-tube" href="#">
             <span class="visually-hidden">You-tube</span>
-            <svg class="social-list__icon social-list__icon--you-tube" width="24" height="19"></svg>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--telegram" href="#">
             <span class="visually-hidden">Telegram</span>
-            <svg class="social-list__icon social-list__icon--telegram" width="20" height="17"></svg>
           </a>
         </li>
       </ul>
-      <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="footer__copyright footer__copyright--text">HTML Academy</span>
-        <img class="footer__copyright footer__copyright--logo" width="27" height="34" src="#" alt="Логотип HTML Academy">
-      </a>
+      <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
 </body>
