--- a/source/index.html
+++ b/source/index.html
@@ -28,12 +28,11 @@
         </picture>
       </a>
       <nav class="main-navigation">
-        <button class="main-navigation__toggle" type="button" aria-expanded="false" aria-controls="main-menu" aria-label="Главное меню открыть/закрыть">
+        <button class="main-navigation__toggle" type="button" aria-expanded="false" aria-controls="main-menu">
           <span class="main-navigation__toggle-icon"></span>
-          <span class="main-navigation__toggle-icon"></span>
-          <span class="main-navigation__toggle-icon"></span>
+          <span class="visually-hidden">Открыть/Закрыть меню</span>
         </button>
-        <ul class="main-navigation__list main-navigation__list--index-desktop" id="main-menu" aria-hidden="true">
+        <ul class="main-navigation__list" id="main-menu" aria-hidden="true">
           <li class="main-navigation__list-item">
             <a class="main-navigation__link main-navigation__link--current" href="./index.html">Главная</a>
           </li>
@@ -68,12 +67,16 @@
           <li class="programs__list-item programs__list-item--weight-loss">
             <h3 class="programs__list-title">Похудение</h3>
             <p class="programs__list-desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="programs__list-link" href="#">Каталог slim</a>
+            <a class="programs__list-link" href="#">Каталог slim
+              <span class="programs__list-arrow"></span>
+            </a>
           </li>
           <li class="programs__list-item programs__list-item--weight-gain">
             <h3 class="programs__list-title">Набор массы</h3>
             <p class="programs__list-desc">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="programs__list-link" href="#">Каталог pro</a>
+            <a class="programs__list-link" href="#">Каталог pro
+              <span class="programs__list-arrow"></span>
+            </a>
           </li>
         </ul>
       </div>
@@ -97,10 +100,23 @@
           <span class="example__results-difference">5 кг</span>
           <span class="example__results-time">60 дней</span>
         </div>
-        <div class="example__spending-money">
+        <<<<<<< HEAD <div class="example__spending-money">
           <span class="example__spending-money-spent">Затраты на питание:</span>
           <span class="example__spending-money-money">15000 руб.</span>
-        </div>
+          =======
+          <span class="example__spending-money">Затраты на питание: 15 000 руб.</span>
+          <div class="demonstration">
+            <picture>
+              <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-before-tablet-desktop@1x.png 1x, ./images/cat-before-tablet-desktop@2x.png 2x">
+              <img class="demonstration__demonstration-image demonstration__demonstration-image--before" src="./images/cat-before-mobile@1x.png" srcset="./images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
+            </picture>
+            <picture>
+              <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-after-tablet-desktop@1x.png 1x, ./images/cat-after-tablet-desktop@2x.png 2x">
+              <img class="demonstration__demonstration-image demonstration__demonstration-image--after" src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
+            </picture>
+            <div class="demonstration__slider" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-labelledby="slider-label"></div>
+            >>>>>>> 4c1c0ab (Отрисованы и добавлены svg элементы)
+          </div>
       </div>
       <div class="demonstration">
         <picture>
