--- a/source/index.html
+++ b/source/index.html
@@ -107,6 +107,7 @@
             <img class="demonstration__demonstration-image demonstration__demonstration-image--after" src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
           </picture>
           <div class="demonstration__slider" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-labelledby="slider-label"></div>
+          <span class="visually-hidden" id="slider-label">Сравнение фотографий</span>
         </div>
       </div>
     </section>
