svg элементы и отрисовка

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -316,28 +316,22 @@
       </a>
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--vk" href="#">
             <span class="visually-hidden">Вконтакте</span>
-            <svg class="social-list__icon social-list__icon--vk" width="27" height="17"></svg>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--you-tube" href="#">
             <span class="visually-hidden">You-tube</span>
-            <svg class="social-list__icon social-list__icon--you-tube" width="24" height="19"></svg>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="#">
+          <a class="social-list__link social-list__link--telegram" href="#">
             <span class="visually-hidden">Telegram</span>
-            <svg class="social-list__icon social-list__icon--telegram" width="20" height="17"></svg>
           </a>
         </li>
       </ul>
-      <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="footer__copyright footer__copyright--text">HTML Academy</span>
-        <img class="footer__copyright footer__copyright--logo" width="27" height="34" src="#" alt="Логотип HTML Academy">
-      </a>
+      <a class="footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
 </body>
