--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
           <span class="main-navigation__toggle-icon"></span>
           <span class="visually-hidden">Открыть/Закрыть меню</span>
         </button>
-        <ul class="main-navigation__list" id="main-menu" aria-hidden="true">
+        <ul class="main-navigation__list" id="main-menu">
           <li class="main-navigation__list-item">
             <a class="main-navigation__link main-navigation__link--current" href="./index.html">Главная</a>
           </li>
@@ -67,16 +67,12 @@
           <li class="programs__list-item programs__list-item--weight-loss">
             <h3 class="programs__list-title">Похудение</h3>
             <p class="programs__list-desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="programs__list-link" href="#">Каталог slim
-              <span class="programs__list-arrow"></span>
-            </a>
+            <a class="programs__list-link" href="#">Каталог slim</a>
           </li>
           <li class="programs__list-item programs__list-item--weight-gain">
             <h3 class="programs__list-title">Набор массы</h3>
             <p class="programs__list-desc">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="programs__list-link" href="#">Каталог pro
-              <span class="programs__list-arrow"></span>
-            </a>
+            <a class="programs__list-link" href="#">Каталог pro</a>
           </li>
         </ul>
       </div>
