--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
       </div>
     </div>
     <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991047846933!2d30.32050837715263!3d59.9387941749152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2sBolshaya%20Konyushennaya%20St%2C%2019%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1754684041879!5m2!1sen!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <div class="footer__wrapper--socials">
+    <div class="footer__wrapper-socials">
       <a class="footer__logo" href="./index.html" aria-label="Перейти на главную страницу">
         <img class="footer__logo-text" src="./images/footer-text-logo.svg" width="128" height="24" alt="Логотип «Кэт энерджи»">
       </a>
