--- a/source/index.html
+++ b/source/index.html
@@ -24,11 +24,12 @@
         </picture>
       </a>
       <nav class="main-navigation">
-        <button class="main-navigation__toggle" type="button" aria-expanded="false" aria-controls="main-menu">
+        <button class="main-navigation__toggle" type="button" aria-expanded="false" aria-controls="main-menu" aria-label="Главное меню открыть/закрыть">
           <span class="main-navigation__toggle-icon"></span>
-          <span class="visually-hidden">Открыть/Закрыть меню</span>
+          <span class="main-navigation__toggle-icon"></span>
+          <span class="main-navigation__toggle-icon"></span>
         </button>
-        <ul class="main-navigation__list" id="main-menu">
+        <ul class="main-navigation__list main-navigation__list--index-desktop" id="main-menu" aria-hidden="true">
           <li class="main-navigation__list-item">
             <a class="main-navigation__link main-navigation__link--current" href="./index.html">Главная</a>
           </li>
@@ -55,7 +56,6 @@
         </picture>
         <a class="hero__nutrition-program" href="./form.html">Подобрать программу</a>
       </div>
-
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы похудения или набора массы</h2>
@@ -93,7 +93,10 @@
           <span class="example__results-difference">5 кг</span>
           <span class="example__results-time">60 дней</span>
         </div>
-        <span class="example__spending-money">Затраты на питание: 15 000 руб.</span>
+        <div class="example__spending-money">
+          <span class="example__spending-money--spent">Затраты на питание:</span>
+          <span class="example__spending-money--money">15000 руб.</span>
+        </div>
       </div>
       <div class="demonstration">
         <picture>
@@ -110,13 +113,23 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__wrapper">
+    <div class="footer__wrapper footer__wrapper--index">
       <p class="footer__invite">Приглашаем к сотрудничеству дилеров!</p>
       <address class="footer__address">ул. Большая Конюшенная, д. 19/8
         <span class="footer__address-town">Санкт-Петербург</span>
       </address>
     </div>
-    <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991047846933!2d30.32050837715263!3d59.9387941749152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2sBolshaya%20Konyushennaya%20St%2C%2019%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1754684041879!5m2!1sen!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="footer__map-container">
+      <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991047846933!2d30.32050837715263!3d59.9387941749152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2sBolshaya%20Konyushennaya%20St%2C%2019%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1754684041879!5m2!1sen!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" onerror="this.closest('.footer__map-container').classList.add('footer__map-container--error')">
+      </iframe>
+      <div class="footer__map-fallback">
+        <picture>
+          <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="./images/map-index-desktop@1x.jpg 1x, ./images/map-index-desktop@2x.jpg 2x">
+          <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="./images/map-index-tablet@1x.jpg 1x, ./images/map-index-tablet@2x.jpg 2x">
+          <img class="footer__map-fallback-image" src="./images/location-background-mobile@1x.png" srcset="./images/location-background-mobile@2x.png 2x" width="320" height="362" alt="Карта расположения офиса">
+        </picture>
+      </div>
+    </div>
     <div class="footer__wrapper-socials">
       <a class="footer__logo" href="./index.html" aria-label="Перейти на главную страницу">
         <img class="footer__logo-text" src="./images/footer-text-logo.svg" width="128" height="24" alt="Логотип «Кэт энерджи»">
