--- a/source/index.html
+++ b/source/index.html
@@ -117,11 +117,13 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__wrapper footer__wrapper--index">
-      <p class="footer__invite">Приглашаем к сотрудничеству дилеров!</p>
-      <address class="footer__address">ул. Большая Конюшенная, д. 19/8
-        <span class="footer__address-town">Санкт-Петербург</span>
-      </address>
+    <div class="footer__contacts">
+      <div class="footer__wrapper">
+        <p class="footer__invite">Приглашаем к сотрудничеству дилеров!</p>
+        <address class="footer__address">ул. Большая Конюшенная, д. 19/8
+          <span class="footer__address-town">Санкт-Петербург</span>
+        </address>
+      </div>
     </div>
     <div class="footer__map-container">
       <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991047846933!2d30.32050837715263!3d59.9387941749152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2sBolshaya%20Konyushennaya%20St%2C%2019%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1754684041879!5m2!1sen!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" onerror="this.closest('.footer__map-container').classList.add('footer__map-container--error')">
