--- a/source/404.html
+++ b/source/404.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
   <h1>404</h1>
-  <p>Страница почти не найдена. <a href="/">Перейти на главную</a>.</p>
+  <p>Страница почти еще не найдена. <a href="/">Перейти на главную</a>.</p>
 </body>
 
 </html>
